# Automate-CV-discordBot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.MD  docker-compose.yml
claude-server/: Dockerfile  server.py
doc/: API.md  ARCHITECTURE.md  COMMANDS.md  DEPLOYMENT.md  DIAGRAMS.md  TESTING.md
src/: main.rs
src/commands/: admin.rs  cv.rs  generation.rs  help.rs  jobs.rs  mod.rs  reminders.rs
src/db/: init.rs  mod.rs  utilities.rs
src/services/: claude_client.rs  mcp_client.rs  mod.rs
