[package]
name = "Automate-CV-discordBot"
version = "0.1.0"
edition = "2021"


[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "model", "framework"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"