[package]
name = "Automate-CV-discordBot"
version = "0.1.0"
edition = "2021"


[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "model", "framework"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync"] }
dotenv = "0.15"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"